# doxlee

./: .codacy.yaml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml  coverage.yaml  docs.yaml  static.yaml
codegen/: README.md  src-cpp.sh  src-h.sh  test-cpp.sh  test-h.sh
demo/: README.md
demo/doxml/basic/: classFoo.xml  classabc_1_1def_1_1Bar.xml  foo_8cpp.xml  namespaceabc.xml  namespaceabc_1_1def.xml  todo.xml
demo/doxml/doxybook2/: ArrayView_8hpp.xml  Asset_8hpp.xml  Assets_8hpp.xml  AudioBuffer_8hpp.xml  AudioManager_8hpp.xml  Audio_8hpp.xml  Config_8hpp.xml  Doxyfile.xml  Engine_8hpp.xml  Exception_8hpp.xml  Framebuffer_8hpp.xml  Graphics_8hpp.xml  GuiWidget_8hpp.xml  Gui_8hpp.xml  Handle_8hpp.xml  Log_8hpp.xml  Path_8hpp.xml  Renderer_8hpp.xml  Texture2D_8hpp.xml  Texture3D_8hpp.xml  Texture_8hpp.xml  Utils_8hpp.xml  advanced.xml  bug.xml  classEngine_1_1Assets_1_1Asset.xml  classEngine_1_1Audio_1_1AudioBuffer.xml  classEngine_1_1Audio_1_1AudioManager.xml  classEngine_1_1Exception.xml  classEngine_1_1Graphics_1_1Framebuffer.xml  classEngine_1_1Graphics_1_1Handle.xml  classEngine_1_1Graphics_1_1Texture.xml  classEngine_1_1Graphics_1_1Texture2D.xml  classEngine_1_1Graphics_1_1Texture3D.xml  classEngine_1_1Gui_1_1GuiWidget.xml  classEngine_1_1Utils_1_1ArrayView.xml  deprecated.xml  dir_3419e189e460663ec2c964233bf8dcd6.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_a7363e98f9e0bdd87618633653859815.xml  dir_b5ac5e964c12a6b13a9d28feb9f3d3ed.xml  (+26 more)
demo/doxml/moxygen/: Doxyfile.xml  bicycle_8cpp.xml  bicycle_8h.xml  classtransport_1_1Bicycle.xml  classtransport_1_1MountainBike.xml  classtransport_1_1RacingBike.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  group__bicycle.xml  group__mountainbike.xml  group__racingbike.xml  index.xml  mountainbike_8cpp.xml  mountainbike_8h.xml  namespacetransport.xml  racingbike_8cpp.xml  racingbike_8h.xml  transport_8h.xml
demo/renders/bootstrap-basic/: classabc_1_1def_1_1Bar.html  classabc_1_1def_1_1Baz.html  classabc_1_1def_1_1Foo.html  index.html
demo/renders/bootstrap-doxybook2/: classEngine_1_1Assets_1_1Asset.html  classEngine_1_1Audio_1_1AudioBuffer.html  classEngine_1_1Audio_1_1AudioManager.html  classEngine_1_1Exception.html  classEngine_1_1Graphics_1_1Framebuffer.html  classEngine_1_1Graphics_1_1Handle.html  classEngine_1_1Graphics_1_1Texture2D.html  classEngine_1_1Graphics_1_1Texture3D.html  classEngine_1_1Gui_1_1GuiWidget.html  classEngine_1_1Utils_1_1ArrayView.html  index.html
demo/renders/bootstrap-moxygen/: classtransport_1_1Bicycle.html  classtransport_1_1MountainBike.html  classtransport_1_1RacingBike.html  index.html
demo/renders/bulma-basic/: classabc_1_1def_1_1Bar.html  classabc_1_1def_1_1Baz.html  classabc_1_1def_1_1Foo.html  index.html
demo/renders/bulma-doxybook2/: classEngine_1_1Assets_1_1Asset.html  classEngine_1_1Audio_1_1AudioBuffer.html  classEngine_1_1Audio_1_1AudioManager.html  classEngine_1_1Exception.html  classEngine_1_1Graphics_1_1Framebuffer.html  classEngine_1_1Graphics_1_1Handle.html  classEngine_1_1Graphics_1_1Texture2D.html  classEngine_1_1Graphics_1_1Texture3D.html  classEngine_1_1Gui_1_1GuiWidget.html  classEngine_1_1Utils_1_1ArrayView.html  index.html
demo/renders/bulma-moxygen/: classtransport_1_1Bicycle.html  classtransport_1_1MountainBike.html  classtransport_1_1RacingBike.html  index.html
demo/renders/docusaurus-basic/: classabc_1_1def_1_1Bar.md  classabc_1_1def_1_1Baz.md  classabc_1_1def_1_1Foo.md  index.md
demo/renders/docusaurus-doxybook2/: classEngine_1_1Assets_1_1Asset.md  classEngine_1_1Audio_1_1AudioBuffer.md  classEngine_1_1Audio_1_1AudioManager.md  classEngine_1_1Exception.md  classEngine_1_1Graphics_1_1Framebuffer.md  classEngine_1_1Graphics_1_1Handle.md  classEngine_1_1Graphics_1_1Texture2D.md  classEngine_1_1Graphics_1_1Texture3D.md  classEngine_1_1Gui_1_1GuiWidget.md  classEngine_1_1Utils_1_1ArrayView.md  index.md
demo/renders/docusaurus-moxygen/: classtransport_1_1Bicycle.md  classtransport_1_1MountainBike.md  classtransport_1_1RacingBike.md  index.md
demo/renders/doxygen-full-basic/: classabc_1_1def_1_1Bar.html  classabc_1_1def_1_1Baz.html  classabc_1_1def_1_1Foo.html  classes.html  index.html
demo/renders/html-basic/: classabc_1_1def_1_1Bar.html  classabc_1_1def_1_1Baz.html  classabc_1_1def_1_1Foo.html  index.html
demo/templates/bootstrap/: class.html  footer.html  header.html  index.html
demo/templates/bulma/: class.html  footer.html  header.html  index.html
demo/templates/docusaurus/: class.md  index.md
demo/templates/doxygen-common/: Makefile  footer.html
demo/templates/doxygen-full/: index-classes.html  (+1 more)
doc/: CMakeLists.txt  context.md
src/: CMakeLists.txt  doxml.cpp  doxml.h  main.cpp  renderer.cpp  renderer.h  textlee.h  variant.cpp  variant.h
test/: CMakeLists.txt  removeHtmlDates.sh.in
test/opaque/: CMakeLists.txt  test.sh
test/opaque/broad/expected/doxygen-full/: classFoo.html  classes.html
test/opaque/broad/src/: foo.cpp
test/opaque/broad/xml/: classabc_1_1def_1_1Baz.xml  classabc_1_1def_1_1Foo.xml  foo_8cpp.xml  index.xml  todo.xml
test/unit/: CMakeLists.txt  testdoxml.cpp  testdoxml.h  testrenderer.cpp  testrenderer.h
test/unit/testdata/compound/: 004_indexpage.var  008_brief_8c.json  008_brief_8c.var  009_bug.json  009_bug.var  009_class_bug.json  009_class_bug.var  009_class_deprecated.json  009_class_deprecated.var  009_class_reminder.json  009_class_reminder.var  009_class_test.json  009_class_test.var  009_class_todo.json  009_class_todo.var  009_deprecated.json  009_deprecated.var  009_reminders.json  009_reminders.var  009_test.json  009_test.var  009_todo.json  009_todo.var  011_category_integer_07_arithmetic_08.json  011_category_integer_07_arithmetic_08.var  011_interface_integer.json  011_interface_integer.var  012_citelist.json  012_citelist.var  013_class_t1.json  013_class_t1.var  013_class_t2.json  013_class_t2.var  013_class_t3.json  013_class_t3.var  013_class_t4.json  013_class_t4.var  014_indexpage.var  015_cond_8c.json  015_cond_8c.var  (+253 more)
themes/doxygen-common/: header.html
(+4 files in other folders)
